Tests unitaire pour build.type=dev

--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/html/index.html
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/html/index.html
@@ -30,7 +30,7 @@
 		Launch <pre>mvn -Dbuild.type=dev compile</pre> to build the <a href="source/index.html">development version of your application</a>
 	</li>
 	<li>
-		Launch <pre>mvn -Dbuild.type=dev qooxdoo:testrunner</pre> to build the <a href="test-source/index.html">testrunner application (unit tests)</a> 
+		Launch <pre>mvn -Dbuild.type=dev qooxdoo:testrunner</pre> to build the <a href="test/index-source.html">testrunner application (unit tests)</a> 
 	</li>
 </ul>
 
