Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Qooxdoo-archetype-desktop : A maven archetype to create a qooxdoo gui application in a minute" />
+    <meta name="description" content="QxMaven Desktop : A Maven archetype to create a desktop oriented web application, powered by Qooxdoo" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Qooxdoo-archetype-desktop</title>
+    <title>QxMaven Desktop</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/salmon-charles/qooxdoo-archetype-desktop">View on GitHub</a>
 
-          <h1 id="project_title">Qooxdoo-archetype-desktop</h1>
-          <h2 id="project_tagline">A maven archetype to create a qooxdoo gui application in a minute</h2>
+          <h1 id="project_title">QxMaven Desktop</h1>
+          <h2 id="project_tagline">A Maven archetype to create a desktop oriented web application, powered by Qooxdoo</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/salmon-charles/qooxdoo-archetype-desktop/zipball/master">Download this project as a .zip file</a>
@@ -131,7 +131,7 @@ Make sure python binary is on your path or specify the full path to the binary i
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Qooxdoo-archetype-desktop maintained by <a href="https://github.com/salmon-charles">salmon-charles</a></p>
+        <p class="copyright">QxMaven Desktop maintained by <a href="https://github.com/salmon-charles">salmon-charles</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
